ErrLogs/2alarm.py.err.log
  File "/home/robot/dexter Alarm/alarm.py", line 212
    line = f"{prefix}{label}: {value}"
                                     ^
SyntaxError: invalid syntax
